Link to "/" instead of "index.html".

--- a/html/bytecode.html
+++ b/html/bytecode.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Bytecode</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="behavioral-patterns.html">Behavioral Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="behavioral-patterns.html">Behavioral Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Give behavior the flexibility of data by encoding it as instructions for a virtual machine.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
