--- a/html/command.html
+++ b/html/command.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Command</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
 <p>I&#8217;m pumped about this chapter because Command is one of my favorite patterns. Most large programs I write, games or otherwise, end up using it somewhere. When I&#8217;ve used it in the right place, it&#8217;s neatly untangled some really gnarly code.</p>
 <p>For such a swell pattern, the Gang of Four has a predictably abstruse description:</p>
 <blockquote>
