--- a/html/introduction.html
+++ b/html/introduction.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Introduction</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a></h1>
 <p>In fifth grade, my friends and I were given access to a little unused
 classroom housing a couple of very beat up TRS-80s. Hoping to inspire
 us, a teacher found a printout of some simple BASIC programs for us
