--- a/html/prototype.html
+++ b/html/prototype.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Prototype</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
 <p>The first time I heard the word &#8220;prototype&#8221; was in <em>Design Patterns</em>. Today, it seems like everyone is saying it, but it turns out they aren&#8217;t talking about the <a href="http://en.wikipedia.org/wiki/Prototype_pattern" class="gof-pattern">design pattern</a>.</p>
 <p>We&#8217;ll cover that here, but I&#8217;ll also show you other, more interesting places where the term &#8220;prototype&#8221; and the concepts behind it have popped up. But first, let&#8217;s revisit the <span name="original">original</span> pattern.</p>
 <aside name="original">
