--- a/html/state.html
+++ b/html/state.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>State</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
 <p>Confession time: I went a little overboard and packed way too much into this chapter. It&#8217;s ostensibly about the <a href="http://en.wikipedia.org/wiki/State_pattern" class="gof-pattern">State design pattern</a>. But I can&#8217;t talk about that and games without going into the more fundamental concept of <em>finite state machines</em> (or &#8220;FSMs&#8221;). But then once I went there, I figured I might as well introduce <em>hierarchical state machines</em> and <em>pushdown automata</em>.</p>
 <p>That&#8217;s a lot to cover, so to keep things as short as possible, the code samples here leave out a few details that you&#8217;ll have to fill in on your own. I hope they&#8217;re still clear enough for you to get the big picture.</p>
 <p>Don&#8217;t feel sad if you&#8217;ve never heard of a state machine. While well known to <span name="two-camps">AI and compiler</span> hackers, they aren&#8217;t that familiar to other programming circles. I think they should be more widely known, so I&#8217;m going to throw them at a different kind of problem here.</p>
