--- a/asset/template.html
+++ b/asset/template.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>{{header}}</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a>{{section_header}}</h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a>{{section_header}}</h1>
 {{body}}
 <nav>
   {{prev}}
