--- a/html/architecture-performance-and-games.html
+++ b/html/architecture-performance-and-games.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Architecture, Performance, and Games</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="introduction.html">Introduction</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="introduction.html">Introduction</a></span></h1>
 <p>Before we plunge headfirst into a pile of patterns, I thought it might help to give you some larger context about how I think about software architecture and how it applies to games. It may help you understand the rest of this book better. If nothing else, when you get dragged into an <span name="ammo">argument</span> about how design patterns and software architecture suck or are awesome, it will give you some ammo to use.</p>
 <aside name="ammo">
 
