--- a/html/component.html
+++ b/html/component.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Component</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="decoupling-patterns.html">Decoupling Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="decoupling-patterns.html">Decoupling Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Allow a single class to bridge multiple domains without coupling the
 domains to each other.</em></p>
