--- a/html/data-locality.html
+++ b/html/data-locality.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Data Locality</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="optimization-patterns.html">Optimization Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="optimization-patterns.html">Optimization Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Speed memory access by arranging data to take advantage of CPU caching.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
