--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Double Buffer</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="sequencing-patterns.html">Sequencing Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="sequencing-patterns.html">Sequencing Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Cause a series of sequential operations to appear instantaneous or
 simultaneous.</em></p>
