--- a/html/event-queue.html
+++ b/html/event-queue.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Event Queue</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="decoupling-patterns.html">Decoupling Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="decoupling-patterns.html">Decoupling Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Decouple when a message or event is sent from when it is processed.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
