--- a/html/game-loop.html
+++ b/html/game-loop.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Game Loop</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="sequencing-patterns.html">Sequencing Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="sequencing-patterns.html">Sequencing Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Decouple the progression of game time from user input and processor speed.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
