--- a/html/service-locator.html
+++ b/html/service-locator.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Service Locator</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="decoupling-patterns.html">Decoupling Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="decoupling-patterns.html">Decoupling Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Provide a global point of access to a service without coupling users
 to the concrete class that implements it.</em></p>
