--- a/html/singleton.html
+++ b/html/singleton.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Singleton</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="design-patterns-revisited.html">Design Patterns Revisited</a></span></h1>
 <p>This chapter is an anomaly. Every other chapter in this book shows
 you how to use a design pattern. This chapter shows you how <em>not</em> to use
 one.</p>
