--- a/html/spatial-partition.html
+++ b/html/spatial-partition.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Spatial Partition</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="optimization-patterns.html">Optimization Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="optimization-patterns.html">Optimization Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Efficiently locate nearby objects by storing them in a data structure organized by their positions.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
