--- a/html/type-object.html
+++ b/html/type-object.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Type Object</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="behavioral-patterns.html">Behavioral Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="behavioral-patterns.html">Behavioral Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Allow the flexible creation of new &#8220;classes&#8221; by creating
 a single class, each instance of which represents a different type of
