--- a/html/update-method.html
+++ b/html/update-method.html
@@ -24,7 +24,7 @@
 <div class="page sidebar">
 <div class="content">
 <h1>Update Method</h1>
-<h1 class="book"><a href="index.html">Game Programming Patterns</a><span class="section"><a href="sequencing-patterns.html">Sequencing Patterns</a></span></h1>
+<h1 class="book"><a href="/">Game Programming Patterns</a><span class="section"><a href="sequencing-patterns.html">Sequencing Patterns</a></span></h1>
 <h2><a href="#intent" name="intent">Intent</a></h2>
 <p><em>Simulate a collection of independent objects by telling each to process one frame of behavior at a time.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
