--- a/html/component.html
+++ b/html/component.html
@@ -323,7 +323,7 @@ Photoshop.&#8221;</p>
 the game. It reads the joystick to determine how to accelerate the
 baker. Then it resolves its new position with the physics engine.
 Finally, it draws Bj&oslash;rn onto the screen.</p>
-<p>The sample implemention here is trivially simple. There&#8217;s no gravity,
+<p>The sample implementation here is trivially simple. There&#8217;s no gravity,
 animation, or any of the dozens of other details that make a character
 fun to play. Even so, we can see that we&#8217;ve got a single function that
 several different coders on our team will probably have to spend time
