--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -515,7 +515,7 @@ occurs:</p>
 </pre></div>
 
 
-<p>So, in a single frame, our initial slap on Harry has propogated
+<p>So, in a single frame, our initial slap on Harry has propagated
 through all of the comedians. Now let&#8217;s mix things up a bit. Lets say
 we reorder the comedians within the stages array, but leaving them
 still facing each other the same way.</p>
