--- a/html/subclass-sandbox.html
+++ b/html/subclass-sandbox.html
@@ -30,7 +30,7 @@
 their shared base class.</em></p>
 <h2><a href="#motivation" name="motivation">Motivation</a></h2>
 <p>Every kid has dreamed of being a superhero, but, unfortunately, cosmic rays are in short supply here on Earth. Games that let you pretend to be a superhero are the closest approximation. Because our game designers have never learned to say, &#8220;no&#8221;, <em>our</em> superhero game is planning to have dozens, if not hundreds of different superpowers that players may have.</p>
-<p>Our plan is that we&#8217;ll have a <code>Superpower</code> base class. Then we&#8217;ll have a <span name="lots">derived</span> class that implements each superpower. We&#8217;ll divy up the design doc among our team of programmers and get coding. When we&#8217;re done, we&#8217;ll have a hundred superpower classes.</p>
+<p>Our plan is that we&#8217;ll have a <code>Superpower</code> base class. Then we&#8217;ll have a <span name="lots">derived</span> class that implements each superpower. We&#8217;ll divvy up the design doc among our team of programmers and get coding. When we&#8217;re done, we&#8217;ll have a hundred superpower classes.</p>
 <aside name="lots">
 
 <p>When you find yourself with a <em>lot</em> of subclasses, like in this example, that
