--- a/html/update-method.html
+++ b/html/update-method.html
@@ -35,7 +35,7 @@
 <p>Who knows? Maybe there is a market for games with no challenge. &#8220;Click 10 Ten Times To Win!&#8221; could be the next smash hit.</p>
 </aside>
 
-<p>This crypt needs some guards&thinsp;&mdash;&thinsp;some enemies our brave heroine can grapple with. First up, we want a re-animated <span name="brains">skeleton guard</span> to patrol back and forth in front of the door. Ignorining everything you probably already know about game programming, the simplest possible code to make that skeleton lurch back and forth is something like:</p>
+<p>This crypt needs some guards&thinsp;&mdash;&thinsp;some enemies our brave heroine can grapple with. First up, we want a re-animated <span name="brains">skeleton guard</span> to patrol back and forth in front of the door. Ignoring everything you probably already know about game programming, the simplest possible code to make that skeleton lurch back and forth is something like:</p>
 <aside name="brains">
 
 <p>If the sorcerer-king wanted more intelligent behavior, he should have re-animated something that still had brain tissue.</p>
