--- a/html/introduction.html
+++ b/html/introduction.html
@@ -253,7 +253,7 @@ note them all. The first time one is mentioned, it will be in <strong>bold
 face</strong>.</p>
 <aside name="aside">
 
-<p>Asides, extra information, and dumb jokes are placed in asides. Feel
+<p>Asides, extra information, and dumb jokes are placed in boxes like this one. Feel
 free to skip them if you want.</p>
 </aside>
 
