--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -88,19 +88,19 @@ purposes.</p>
 
 <p>In order to get our game to appear on screen, all we ultimately do is
 write to that array. All of the crazy advanced graphics algorithms we
-have eventually boil down to just that: setting byte values in the
-framebuffer. But there&#8217;s a little problem:</p>
+have boil down to just that: setting byte values in the framebuffer.
+But there&#8217;s a little problem.</p>
 <p>Earlier, I said computers are sequential. If it&#8217;s executing a chunk of
 <em>our</em> rendering code, we don&#8217;t expect it to be doing anything else at
 the same time. That&#8217;s mostly accurate, but a couple of things <em>do</em>
 happen in the middle of our program running. One of those is that the
 video display will be reading from the framebuffer <em>constantly</em> while
 our game runs. This can cause a problem for us.</p>
-<p>Let&#8217;s say we want a big red circle to appear on screen. Our program
-starts looping through the framebuffer, setting pixels to red. What we
+<p>Let&#8217;s say we want a happy face to appear on screen. Our program
+starts looping through the framebuffer, coloring pixels. What we
 don&#8217;t realize is that the video driver is pulling from the framebuffer
 right as we&#8217;re writing to it. As it scans across the pixels we&#8217;ve
-written, our circle starts to appear. But then it outpaces us and
+written, our face starts to appear. But then it outpaces us and
 moves into pixels we haven&#8217;t gotten to yet. The result is <em>tearing:</em> a
 hideous visual bug where you see half of something drawn on screen.</p>
 <p><span name="tearing"></span></p>
@@ -117,7 +117,7 @@ doesn&#8217;t catch those new pixels.</p>
 
 <p>This is why we need this pattern. Our program renders the pixels one
 at a time, but we need the display driver to see them all at
-once&thinsp;&mdash;&thinsp;one refresh the circle isn&#8217;t there, the next one it is.
+once&thinsp;&mdash;&thinsp;one refresh the face isn&#8217;t there, the next one it is.
 Double buffering solves this. I&#8217;ll explain how by analogy.</p>
 <h3><a href="#act-1,-scene-1" name="act-1,-scene-1">Act 1, Scene 1</a></h3>
 <p>Imagine our users are watching a play, produced by ourselves. As scene
@@ -371,8 +371,8 @@ video driver needs to get at the pixels, it always accesses the
 on. The only remaining piece of the puzzle is the call to <code>swap()</code>
 when the scene is done drawing the frame. That swaps the two buffers
 by simply switching the <code>next_</code> and <code>current_</code> references. The next
-time the video driver calls <code>getBuffer()</code> it will now get the new
-buffer we just finished drawing and put our recently drawing buffer
+time the video driver calls <code>getBuffer()</code>, it will now get the new
+buffer we just finished drawing and put our recently drawn buffer
 onscreen. No more tearing or unsightly glitches.</p>
 <h3><a href="#not-just-for-graphics" name="not-just-for-graphics">Not just for graphics</a></h3>
 <p>The core problem that a Double Buffer solves is state being accessed
@@ -752,7 +752,6 @@ object-relative <em>offsets</em>. Like so:</p>
   <span class="k">static</span> <span class="kt">void</span> <span class="n">init</span><span class="p">()</span> <span class="p">{</span> <span class="n">current_</span> <span class="o">=</span> <span class="mi">0</span><span class="p">;</span> <span class="p">}</span>
   <span class="k">static</span> <span class="kt">void</span> <span class="n">swap</span><span class="p">()</span> <span class="p">{</span> <span class="n">current_</span> <span class="o">=</span> <span class="n">next</span><span class="p">();</span> <span class="p">}</span>
 
-<span class="nl">protected:</span>
   <span class="kt">void</span> <span class="n">slap</span><span class="p">()</span>        <span class="p">{</span> <span class="n">slapped_</span><span class="p">[</span><span class="n">next</span><span class="p">()]</span> <span class="o">=</span> <span class="nb">true</span><span class="p">;</span> <span class="p">}</span>
   <span class="kt">bool</span> <span class="n">wasSlapped</span><span class="p">()</span>  <span class="p">{</span> <span class="k">return</span> <span class="n">slapped_</span><span class="p">[</span><span class="n">current_</span><span class="p">];</span> <span class="p">}</span>
 
