Fix typos in Double Buffer.

--- a/html/double-buffer.html
+++ b/html/double-buffer.html
@@ -704,7 +704,7 @@ buffer would.</p>
 <p><em>Swapping can take more time.</em> This, of course, is the big
     negative point. Our swap operation now means copying the
     entire buffer in memory. If the buffer is large, like an
-    entire framebuffer, it can a signficant chunk of time to do
+    entire framebuffer, it can take a significant chunk of time to do
     this. Since nothing can read or write to <em>either</em> buffer
     while this is happening, that&#8217;s a big limitation.</p>
 </li>
